// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`smtp details create smtp details and test 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
          data-icon="smtp"
        >
          <svg
            height="56"
            viewBox="0 0 56 56"
            width="56"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_425_33595)"
            >
              <path
                d="M5.25 15.75C5.73325 15.75 6.125 15.3582 6.125 14.875C6.125 14.3918 5.73325 14 5.25 14C4.76675 14 4.375 14.3918 4.375 14.875C4.375 15.3582 4.76675 15.75 5.25 15.75Z"
                fill="currentColor"
              />
              <path
                d="M8.75 15.75C9.23325 15.75 9.625 15.3582 9.625 14.875C9.625 14.3918 9.23325 14 8.75 14C8.26675 14 7.875 14.3918 7.875 14.875C7.875 15.3582 8.26675 15.75 8.75 15.75Z"
                fill="currentColor"
              />
              <path
                d="M12.25 15.75C12.7332 15.75 13.125 15.3582 13.125 14.875C13.125 14.3918 12.7332 14 12.25 14C11.7668 14 11.375 14.3918 11.375 14.875C11.375 15.3582 11.7668 15.75 12.25 15.75Z"
                fill="currentColor"
              />
              <path
                d="M21.875 15.75H38.5C38.7321 15.75 38.9546 15.6578 39.1187 15.4937C39.2828 15.3296 39.375 15.1071 39.375 14.875C39.375 14.6429 39.2828 14.4204 39.1187 14.2563C38.9546 14.0922 38.7321 14 38.5 14H21.875C21.6429 14 21.4204 14.0922 21.2563 14.2563C21.0922 14.4204 21 14.6429 21 14.875C21 15.1071 21.0922 15.3296 21.2563 15.4937C21.4204 15.6578 21.6429 15.75 21.875 15.75Z"
                fill="currentColor"
              />
              <path
                d="M2.625 20.5625H41.125C41.821 20.5617 42.4882 20.2849 42.9803 19.7928C43.4724 19.3007 43.7492 18.6335 43.75 17.9375V11.8125C43.7492 11.1165 43.4724 10.4493 42.9803 9.95718C42.4882 9.46507 41.821 9.18826 41.125 9.1875H2.625C1.92904 9.18826 1.2618 9.46506 0.769682 9.95718C0.277564 10.4493 0.000758515 11.1165 0 11.8125L0 17.9375C0.000758515 18.6335 0.277564 19.3007 0.769682 19.7928C1.2618 20.2849 1.92904 20.5617 2.625 20.5625ZM1.75 11.8125C1.75027 11.5805 1.84254 11.3581 2.00658 11.1941C2.17062 11.03 2.39302 10.9378 2.625 10.9375H41.125C41.357 10.9378 41.5794 11.03 41.7434 11.1941C41.9075 11.3581 41.9997 11.5805 42 11.8125V17.9375C41.9997 18.1695 41.9075 18.3919 41.7434 18.5559C41.5794 18.72 41.357 18.8122 41.125 18.8125H2.625C2.39302 18.8122 2.17062 18.72 2.00658 18.5559C1.84254 18.3919 1.75027 18.1695 1.75 17.9375V11.8125Z"
                fill="currentColor"
              />
              <path
                d="M5.25 28.875C5.73325 28.875 6.125 28.4832 6.125 28C6.125 27.5168 5.73325 27.125 5.25 27.125C4.76675 27.125 4.375 27.5168 4.375 28C4.375 28.4832 4.76675 28.875 5.25 28.875Z"
                fill="currentColor"
              />
              <path
                d="M8.75 28.875C9.23325 28.875 9.625 28.4832 9.625 28C9.625 27.5168 9.23325 27.125 8.75 27.125C8.26675 27.125 7.875 27.5168 7.875 28C7.875 28.4832 8.26675 28.875 8.75 28.875Z"
                fill="currentColor"
              />
              <path
                d="M12.25 28.875C12.7332 28.875 13.125 28.4832 13.125 28C13.125 27.5168 12.7332 27.125 12.25 27.125C11.7668 27.125 11.375 27.5168 11.375 28C11.375 28.4832 11.7668 28.875 12.25 28.875Z"
                fill="currentColor"
              />
              <path
                d="M21.875 27.125C21.6429 27.125 21.4204 27.2172 21.2563 27.3813C21.0922 27.5454 21 27.7679 21 28C21 28.2321 21.0922 28.4546 21.2563 28.6187C21.4204 28.7828 21.6429 28.875 21.875 28.875H38.5C38.7321 28.875 38.9546 28.7828 39.1187 28.6187C39.2828 28.4546 39.375 28.2321 39.375 28C39.375 27.7679 39.2828 27.5454 39.1187 27.3813C38.9546 27.2172 38.7321 27.125 38.5 27.125H21.875Z"
                fill="currentColor"
              />
              <path
                d="M5.25 42C5.73325 42 6.125 41.6082 6.125 41.125C6.125 40.6418 5.73325 40.25 5.25 40.25C4.76675 40.25 4.375 40.6418 4.375 41.125C4.375 41.6082 4.76675 42 5.25 42Z"
                fill="currentColor"
              />
              <path
                d="M8.75 42C9.23325 42 9.625 41.6082 9.625 41.125C9.625 40.6418 9.23325 40.25 8.75 40.25C8.26675 40.25 7.875 40.6418 7.875 41.125C7.875 41.6082 8.26675 42 8.75 42Z"
                fill="currentColor"
              />
              <path
                d="M12.25 42C12.7332 42 13.125 41.6082 13.125 41.125C13.125 40.6418 12.7332 40.25 12.25 40.25C11.7668 40.25 11.375 40.6418 11.375 41.125C11.375 41.6082 11.7668 42 12.25 42Z"
                fill="currentColor"
              />
              <path
                d="M46.558 17.8997C47.3345 18.1276 48.0581 18.5075 48.6865 19.0174C49.3149 19.5273 49.8357 20.157 50.2187 20.8699C50.7203 21.8028 50.9407 22.8612 50.8531 23.9168C50.6829 23.8559 50.498 23.8495 50.3239 23.8984C50.1499 23.9473 49.9954 24.049 49.8817 24.1896C49.7681 24.3302 49.701 24.5027 49.6897 24.6831C49.6784 24.8635 49.7235 25.043 49.8187 25.1966L51.0159 27.1455C51.0942 27.2729 51.2038 27.3782 51.3343 27.4512C51.4648 27.5242 51.6119 27.5625 51.7614 27.5625H51.764C51.9141 27.562 52.0615 27.523 52.1921 27.4492C52.3227 27.3753 52.4322 27.2691 52.51 27.1408L53.6862 25.1986C53.7822 25.041 53.8257 24.857 53.8106 24.6731C53.7955 24.4891 53.7225 24.3147 53.6021 24.1749C53.4817 24.0351 53.32 23.937 53.1404 23.8948C52.9608 23.8525 52.7724 23.8683 52.6023 23.9399C52.6931 22.5897 52.4025 21.2412 51.7636 20.0483C51.2732 19.1317 50.6055 18.3216 49.7992 17.6653C48.993 17.009 48.0644 16.5195 47.0673 16.2253C46.8454 16.1582 46.6059 16.1819 46.4014 16.2912C46.197 16.4005 46.0443 16.5865 45.9768 16.8083C45.9094 17.0301 45.9327 17.2696 46.0417 17.4742C46.1506 17.6789 46.3363 17.8319 46.558 17.8997Z"
                fill="currentColor"
              />
              <path
                d="M2.625 45.0625C2.39302 45.0622 2.17062 44.97 2.00658 44.8059C1.84254 44.6419 1.75027 44.4195 1.75 44.1875V38.0625C1.75027 37.8305 1.84254 37.6081 2.00658 37.4441C2.17062 37.28 2.39302 37.1878 2.625 37.1875H27.125V35.4375H2.625C1.92904 35.4383 1.2618 35.7151 0.769682 36.2072C0.277564 36.6993 0.000758515 37.3665 0 38.0625L0 44.1875C0.000758515 44.8835 0.277564 45.5507 0.769682 46.0428C1.2618 46.5349 1.92904 46.8117 2.625 46.8125H27.9769C27.5864 46.2969 27.3206 45.698 27.2002 45.0625H2.625Z"
                fill="currentColor"
              />
              <path
                d="M2.625 33.6875H27.125V33.5845C27.1248 33.0181 27.2402 32.4577 27.4642 31.9375H2.625C2.39302 31.9372 2.17062 31.845 2.00658 31.6809C1.84254 31.5169 1.75027 31.2945 1.75 31.0625V24.9375C1.75027 24.7055 1.84254 24.4831 2.00658 24.3191C2.17062 24.155 2.39302 24.0628 2.625 24.0625H41.125C41.357 24.0628 41.5794 24.155 41.7434 24.3191C41.9075 24.4831 41.9997 24.7055 42 24.9375V29.3125H43.75V24.9375C43.7492 24.2415 43.4724 23.5743 42.9803 23.0822C42.4882 22.5901 41.821 22.3133 41.125 22.3125H2.625C1.92904 22.3133 1.2618 22.5901 0.769682 23.0822C0.277564 23.5743 0.000758515 24.2415 0 24.9375L0 31.0625C0.000758515 31.7585 0.277564 32.4257 0.769682 32.9178C1.2618 33.4099 1.92904 33.6867 2.625 33.6875Z"
                fill="currentColor"
              />
              <path
                d="M53.375 31.0625H31.5C30.8178 31.0499 30.1583 31.3082 29.6663 31.781C29.1742 32.2537 28.8897 32.9023 28.875 33.5845V44.2905C28.8897 44.9727 29.1742 45.6212 29.6663 46.094C30.1583 46.5667 30.8178 46.8251 31.5 46.8125H53.375C54.0572 46.8251 54.7167 46.5667 55.2087 46.094C55.7008 45.6212 55.9853 44.9727 56 44.2905V33.5845C55.9853 32.9023 55.7008 32.2537 55.2087 31.781C54.7167 31.3082 54.0572 31.0499 53.375 31.0625ZM48.7928 39.8887L47.3692 40.984L52.3381 45.0625H32.5079L37.4934 40.9817L36.0673 39.8875L30.6306 44.3379C30.6293 44.3218 30.631 33.5348 30.6335 33.5098L41.1801 41.6033C41.5432 41.8561 41.9742 41.9934 42.4166 41.9973C42.859 42.0012 43.2923 41.8715 43.6598 41.6251C43.6821 41.6108 54.2389 33.4875 54.2389 33.4875C54.2436 33.5198 54.2444 44.3377 54.2419 44.3614L48.7928 39.8887ZM32.5993 32.8125H52.2471L42.6951 40.1639C42.6277 40.2169 42.5457 40.2481 42.46 40.2534C42.3744 40.2586 42.2892 40.2376 42.2158 40.1932L32.5993 32.8125Z"
                fill="currentColor"
              />
              <path
                d="M21 41.125C21 41.3571 21.0922 41.5796 21.2563 41.7437C21.4204 41.9078 21.6429 42 21.875 42H27.125V40.25H21.875C21.6429 40.25 21.4204 40.3422 21.2563 40.5063C21.0922 40.6704 21 40.8929 21 41.125Z"
                fill="currentColor"
              />
            </g>
            <defs>
              <clippath
                id="clip0_425_33595"
              >
                <rect
                  fill="currentColor"
                  height="56"
                  width="56"
                />
              </clippath>
            </defs>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        common.smtp.conifg
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          details
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          credentials
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          common.smtp.testConnection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-small"
          style="height: 570px;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--font-variation-h3"
          >
            common.smtp.smtpConnectivity
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xlarge StyledProps--color StyledProps--color-black StyledProps--font-variation-small"
          >
            common.smtp.modalSubHeading
          </p>
          <div
            class="StyledProps--font StyledProps--main smtpMdlContainer"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="to-0"
                >
                  <label
                    class="bp3-label"
                    for="to"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="smtpStepTestConnectionForm_to"
                    >
                      common.smtp.labelTo
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="to"
                        type="text"
                        value="test@test.com"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="subject-1"
                >
                  <label
                    class="bp3-label"
                    for="subject"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="smtpStepTestConnectionForm_subject"
                    >
                      common.smtp.labelSubject
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="subject"
                        type="text"
                        value="common.smtp.preConfiguredSubject"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="body-2"
                >
                  <label
                    class="bp3-label"
                    for="body"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="smtpStepTestConnectionForm_body"
                    >
                      common.smtp.labelBody
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="body"
                        type="text"
                        value="common.smtp.preConfiguredBody"
                      />
                    </div>
                  </div>
                </div>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    test
                  </span>
                </button>
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main buttonPanel"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-tertiary"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                      icon="chevron-left"
                    >
                      <svg
                        data-icon="chevron-left"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-left
                        </desc>
                        <path
                          d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      previous
                    </span>
                  </button>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      continue
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`smtp details render smtp creation dialog 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
          data-icon="smtp"
        >
          <svg
            height="56"
            viewBox="0 0 56 56"
            width="56"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_425_33595)"
            >
              <path
                d="M5.25 15.75C5.73325 15.75 6.125 15.3582 6.125 14.875C6.125 14.3918 5.73325 14 5.25 14C4.76675 14 4.375 14.3918 4.375 14.875C4.375 15.3582 4.76675 15.75 5.25 15.75Z"
                fill="currentColor"
              />
              <path
                d="M8.75 15.75C9.23325 15.75 9.625 15.3582 9.625 14.875C9.625 14.3918 9.23325 14 8.75 14C8.26675 14 7.875 14.3918 7.875 14.875C7.875 15.3582 8.26675 15.75 8.75 15.75Z"
                fill="currentColor"
              />
              <path
                d="M12.25 15.75C12.7332 15.75 13.125 15.3582 13.125 14.875C13.125 14.3918 12.7332 14 12.25 14C11.7668 14 11.375 14.3918 11.375 14.875C11.375 15.3582 11.7668 15.75 12.25 15.75Z"
                fill="currentColor"
              />
              <path
                d="M21.875 15.75H38.5C38.7321 15.75 38.9546 15.6578 39.1187 15.4937C39.2828 15.3296 39.375 15.1071 39.375 14.875C39.375 14.6429 39.2828 14.4204 39.1187 14.2563C38.9546 14.0922 38.7321 14 38.5 14H21.875C21.6429 14 21.4204 14.0922 21.2563 14.2563C21.0922 14.4204 21 14.6429 21 14.875C21 15.1071 21.0922 15.3296 21.2563 15.4937C21.4204 15.6578 21.6429 15.75 21.875 15.75Z"
                fill="currentColor"
              />
              <path
                d="M2.625 20.5625H41.125C41.821 20.5617 42.4882 20.2849 42.9803 19.7928C43.4724 19.3007 43.7492 18.6335 43.75 17.9375V11.8125C43.7492 11.1165 43.4724 10.4493 42.9803 9.95718C42.4882 9.46507 41.821 9.18826 41.125 9.1875H2.625C1.92904 9.18826 1.2618 9.46506 0.769682 9.95718C0.277564 10.4493 0.000758515 11.1165 0 11.8125L0 17.9375C0.000758515 18.6335 0.277564 19.3007 0.769682 19.7928C1.2618 20.2849 1.92904 20.5617 2.625 20.5625ZM1.75 11.8125C1.75027 11.5805 1.84254 11.3581 2.00658 11.1941C2.17062 11.03 2.39302 10.9378 2.625 10.9375H41.125C41.357 10.9378 41.5794 11.03 41.7434 11.1941C41.9075 11.3581 41.9997 11.5805 42 11.8125V17.9375C41.9997 18.1695 41.9075 18.3919 41.7434 18.5559C41.5794 18.72 41.357 18.8122 41.125 18.8125H2.625C2.39302 18.8122 2.17062 18.72 2.00658 18.5559C1.84254 18.3919 1.75027 18.1695 1.75 17.9375V11.8125Z"
                fill="currentColor"
              />
              <path
                d="M5.25 28.875C5.73325 28.875 6.125 28.4832 6.125 28C6.125 27.5168 5.73325 27.125 5.25 27.125C4.76675 27.125 4.375 27.5168 4.375 28C4.375 28.4832 4.76675 28.875 5.25 28.875Z"
                fill="currentColor"
              />
              <path
                d="M8.75 28.875C9.23325 28.875 9.625 28.4832 9.625 28C9.625 27.5168 9.23325 27.125 8.75 27.125C8.26675 27.125 7.875 27.5168 7.875 28C7.875 28.4832 8.26675 28.875 8.75 28.875Z"
                fill="currentColor"
              />
              <path
                d="M12.25 28.875C12.7332 28.875 13.125 28.4832 13.125 28C13.125 27.5168 12.7332 27.125 12.25 27.125C11.7668 27.125 11.375 27.5168 11.375 28C11.375 28.4832 11.7668 28.875 12.25 28.875Z"
                fill="currentColor"
              />
              <path
                d="M21.875 27.125C21.6429 27.125 21.4204 27.2172 21.2563 27.3813C21.0922 27.5454 21 27.7679 21 28C21 28.2321 21.0922 28.4546 21.2563 28.6187C21.4204 28.7828 21.6429 28.875 21.875 28.875H38.5C38.7321 28.875 38.9546 28.7828 39.1187 28.6187C39.2828 28.4546 39.375 28.2321 39.375 28C39.375 27.7679 39.2828 27.5454 39.1187 27.3813C38.9546 27.2172 38.7321 27.125 38.5 27.125H21.875Z"
                fill="currentColor"
              />
              <path
                d="M5.25 42C5.73325 42 6.125 41.6082 6.125 41.125C6.125 40.6418 5.73325 40.25 5.25 40.25C4.76675 40.25 4.375 40.6418 4.375 41.125C4.375 41.6082 4.76675 42 5.25 42Z"
                fill="currentColor"
              />
              <path
                d="M8.75 42C9.23325 42 9.625 41.6082 9.625 41.125C9.625 40.6418 9.23325 40.25 8.75 40.25C8.26675 40.25 7.875 40.6418 7.875 41.125C7.875 41.6082 8.26675 42 8.75 42Z"
                fill="currentColor"
              />
              <path
                d="M12.25 42C12.7332 42 13.125 41.6082 13.125 41.125C13.125 40.6418 12.7332 40.25 12.25 40.25C11.7668 40.25 11.375 40.6418 11.375 41.125C11.375 41.6082 11.7668 42 12.25 42Z"
                fill="currentColor"
              />
              <path
                d="M46.558 17.8997C47.3345 18.1276 48.0581 18.5075 48.6865 19.0174C49.3149 19.5273 49.8357 20.157 50.2187 20.8699C50.7203 21.8028 50.9407 22.8612 50.8531 23.9168C50.6829 23.8559 50.498 23.8495 50.3239 23.8984C50.1499 23.9473 49.9954 24.049 49.8817 24.1896C49.7681 24.3302 49.701 24.5027 49.6897 24.6831C49.6784 24.8635 49.7235 25.043 49.8187 25.1966L51.0159 27.1455C51.0942 27.2729 51.2038 27.3782 51.3343 27.4512C51.4648 27.5242 51.6119 27.5625 51.7614 27.5625H51.764C51.9141 27.562 52.0615 27.523 52.1921 27.4492C52.3227 27.3753 52.4322 27.2691 52.51 27.1408L53.6862 25.1986C53.7822 25.041 53.8257 24.857 53.8106 24.6731C53.7955 24.4891 53.7225 24.3147 53.6021 24.1749C53.4817 24.0351 53.32 23.937 53.1404 23.8948C52.9608 23.8525 52.7724 23.8683 52.6023 23.9399C52.6931 22.5897 52.4025 21.2412 51.7636 20.0483C51.2732 19.1317 50.6055 18.3216 49.7992 17.6653C48.993 17.009 48.0644 16.5195 47.0673 16.2253C46.8454 16.1582 46.6059 16.1819 46.4014 16.2912C46.197 16.4005 46.0443 16.5865 45.9768 16.8083C45.9094 17.0301 45.9327 17.2696 46.0417 17.4742C46.1506 17.6789 46.3363 17.8319 46.558 17.8997Z"
                fill="currentColor"
              />
              <path
                d="M2.625 45.0625C2.39302 45.0622 2.17062 44.97 2.00658 44.8059C1.84254 44.6419 1.75027 44.4195 1.75 44.1875V38.0625C1.75027 37.8305 1.84254 37.6081 2.00658 37.4441C2.17062 37.28 2.39302 37.1878 2.625 37.1875H27.125V35.4375H2.625C1.92904 35.4383 1.2618 35.7151 0.769682 36.2072C0.277564 36.6993 0.000758515 37.3665 0 38.0625L0 44.1875C0.000758515 44.8835 0.277564 45.5507 0.769682 46.0428C1.2618 46.5349 1.92904 46.8117 2.625 46.8125H27.9769C27.5864 46.2969 27.3206 45.698 27.2002 45.0625H2.625Z"
                fill="currentColor"
              />
              <path
                d="M2.625 33.6875H27.125V33.5845C27.1248 33.0181 27.2402 32.4577 27.4642 31.9375H2.625C2.39302 31.9372 2.17062 31.845 2.00658 31.6809C1.84254 31.5169 1.75027 31.2945 1.75 31.0625V24.9375C1.75027 24.7055 1.84254 24.4831 2.00658 24.3191C2.17062 24.155 2.39302 24.0628 2.625 24.0625H41.125C41.357 24.0628 41.5794 24.155 41.7434 24.3191C41.9075 24.4831 41.9997 24.7055 42 24.9375V29.3125H43.75V24.9375C43.7492 24.2415 43.4724 23.5743 42.9803 23.0822C42.4882 22.5901 41.821 22.3133 41.125 22.3125H2.625C1.92904 22.3133 1.2618 22.5901 0.769682 23.0822C0.277564 23.5743 0.000758515 24.2415 0 24.9375L0 31.0625C0.000758515 31.7585 0.277564 32.4257 0.769682 32.9178C1.2618 33.4099 1.92904 33.6867 2.625 33.6875Z"
                fill="currentColor"
              />
              <path
                d="M53.375 31.0625H31.5C30.8178 31.0499 30.1583 31.3082 29.6663 31.781C29.1742 32.2537 28.8897 32.9023 28.875 33.5845V44.2905C28.8897 44.9727 29.1742 45.6212 29.6663 46.094C30.1583 46.5667 30.8178 46.8251 31.5 46.8125H53.375C54.0572 46.8251 54.7167 46.5667 55.2087 46.094C55.7008 45.6212 55.9853 44.9727 56 44.2905V33.5845C55.9853 32.9023 55.7008 32.2537 55.2087 31.781C54.7167 31.3082 54.0572 31.0499 53.375 31.0625ZM48.7928 39.8887L47.3692 40.984L52.3381 45.0625H32.5079L37.4934 40.9817L36.0673 39.8875L30.6306 44.3379C30.6293 44.3218 30.631 33.5348 30.6335 33.5098L41.1801 41.6033C41.5432 41.8561 41.9742 41.9934 42.4166 41.9973C42.859 42.0012 43.2923 41.8715 43.6598 41.6251C43.6821 41.6108 54.2389 33.4875 54.2389 33.4875C54.2436 33.5198 54.2444 44.3377 54.2419 44.3614L48.7928 39.8887ZM32.5993 32.8125H52.2471L42.6951 40.1639C42.6277 40.2169 42.5457 40.2481 42.46 40.2534C42.3744 40.2586 42.2892 40.2376 42.2158 40.1932L32.5993 32.8125Z"
                fill="currentColor"
              />
              <path
                d="M21 41.125C21 41.3571 21.0922 41.5796 21.2563 41.7437C21.4204 41.9078 21.6429 42 21.875 42H27.125V40.25H21.875C21.6429 40.25 21.4204 40.3422 21.2563 40.5063C21.0922 40.6704 21 40.8929 21 41.125Z"
                fill="currentColor"
              />
            </g>
            <defs>
              <clippath
                id="clip0_425_33595"
              >
                <rect
                  fill="currentColor"
                  height="56"
                  width="56"
                />
              </clippath>
            </defs>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        common.smtp.conifg
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          details
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          credentials
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          common.smtp.testConnection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-small"
          style="height: 570px;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--font-variation-h3"
          >
            details
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xlarge StyledProps--color StyledProps--color-black StyledProps--font-variation-small"
          >
            common.smtp.modalSubHeading
          </p>
          <div
            class="StyledProps--font StyledProps--main smtpMdlContainer"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="smtpStepDetailsForm_name"
                    >
                      name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="host-1"
                >
                  <label
                    class="bp3-label"
                    for="host"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="smtpStepDetailsForm_host"
                    >
                      pipelineSteps.hostLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="host"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="port-2"
                >
                  <label
                    class="bp3-label"
                    for="port"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="smtpStepDetailsForm_port"
                    >
                      common.smtp.port
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="port"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="useSSL-3"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <label
                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                    >
                      <input
                        name="useSSL"
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <span
                        class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                        data-tooltip-id="smtpStepDetailsForm_useSSL"
                      >
                        common.smtp.enableSSL
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="startTLS-4"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <label
                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                    >
                      <input
                        name="startTLS"
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <span
                        class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                        data-tooltip-id="smtpStepDetailsForm_startTLS"
                      >
                        common.smtp.startTSL
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="fromAddress-5"
                >
                  <label
                    class="bp3-label"
                    for="fromAddress"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="smtpStepDetailsForm_fromAddress"
                    >
                      common.smtp.fromAddress
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="fromAddress"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main buttonPanel"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      continue
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;
